depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool
  namespace: kube
spec:
  selector:
    matchLabels:
      app: nginx-multitool
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: confngnx
              mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes:
      - name: confngnx
        configMap:
          name: confngnx
