deplngnx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kube
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
            - name: confngnx
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: confngnx
        configMap:
          name: confngnx
