service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-multitool
  namespace: kube
spec:
  ports:
    - name: http-nginx
      port: 80
      nodePort: 30000
    - name: http-multitool
      port: 8080
      nodePort: 30001
  selector:
    app: nginx-multitool
  type: NodePort
