sevice2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: kube
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
